Move API keys to PostgreSQL
Third step of the FDP 2.0 move away from MongoDB: API keys are stored
in the api_key table with a foreign key to their owner.

- ApiKey becomes a JPA entity (UUID id, ManyToOne user, unique token,
  timestamps); ApiKeyRepository becomes a JpaRepository
- the per-request token lookup is a JPQL projection returning only the
  owner's UUID, so no user row (and no password hash) is loaded on the
  authentication path
- create/delete run in transactions; tokens are generated with a
  cryptographically secure random source (the previous generator was
  not; pre-existing, fixed on the rewritten line)
- deleting a user now removes the user's API keys through the
  foreign-key cascade
- repository tests: cascade, projection, id guard, mapping round-trip

REST API unchanged. Other features still use MongoDB.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>